--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>何晓辉的个人网站</title>
-  </head><style>
+<超文本标记语言语言=“zh-CN”>
+  <头>
+    <自指的字符集=“UTF八号” />
+    <自指的http-equiv=" X-UA兼容" 内容=" IE =边缘" />
+    <自指的名字="视窗" 内容=宽度=设备宽度，初始比例=1.0 />
+    <标题>何晓辉的个人网站</标题>
+  </头><风格>
 p{
 
-  background-color:rgba(212, 160, 160, 0.575);
+  背景颜色:rgba(212, 160, 160, 0.575);
 }
 
 
@@ -21,31 +21,31 @@ p{
 
 
 
-  </style>
-  <body background="12182.jpg.png" >
-    <div style="text-align: center;">
-<img src="头像1.jpg" alt="何晓辉" width="80px"height="80px" usemap="#planetmap">
-<map name="planetmap">
-  <area shape="rect" coords= "0,0,82,126" alt="作业" href="作业.html" usemap="#planetmap">
-</map>
-  </div>
-  <p>&nbsp&nbsp&nbsp&nbsp 你好啊朋友,我是<strong>何晓辉</strong>。茫茫人海你能够看到这个网站也是你我的缘分。<br>
- 现在是一个自学编程的小白虽然这很难，我想我为了梦想会坚持一段时间的吧。<br></p>
-  <p> &nbsp&nbsp&nbsp&nbsp 以前在<b>富士康</b>、<b>顺丰</b>和<b>海底捞</b>工作过一段时间,
-    发现这样的工作并不适合我，<br>
-    也曾想过只要给钱在哪里都是一样。只能我想的太简单了，我已经很努力的想要去融入这个公司,<br>
-    然而事实是你的努力领导看不到，每天重复着那机械式动作和那虚伪的假笑而他们只需要结果。<br>
-    只有每周仅有的一天休息才让我知道我还活着。</p>
-   <p>&nbsp&nbsp&nbsp&nbsp终于在疫情和这样残酷的现实面前我毅然选择了做出改变再也不会去这样对待员工的地方，<br>
-   也算是自我救赎解放了吧。</p>
-<p>&nbsp&nbsp&nbsp&nbsp在开w3cschool始了<a href="https://www.w3cschool.cn">启蒙学习</a>。</p>
+  </风格>
+  <身体背景=" 12181.jpg.png " >
+    <差异风格="文本对齐: 中心;">
+<img科学研究委员会="头像1.jpg " 中高音="何晓辉" 宽度=" 80px "高度=" 80px " 使用地图=" #planetmap ">
+<地图名字=“行星地图”>
+  <区域形状="矩形" 坐标= "0,0,82,126" 中高音="作业" href="作业。html " 使用地图=" #planetmap ">
+</地图>
+  </差异>
+  <p>    你好啊朋友,我是<强烈的>何晓辉</强烈的>。茫茫人海你能够看到这个网站也是你我的缘分。<英国铁路公司>
+现在是一个自学编程的小白虽然这很难,我想我为了梦想会坚持一段时间的吧。<英国铁路公司></p>
+  <p>    以前在<b>富士康</b>、<b>顺丰</b>和<b>海底捞</b>工作过一段时间,
+发现这样的工作并不适合我,<英国铁路公司>
+也曾想过只要给钱在哪里都是一样。只能我想的太简单了,我已经很努力的想要去融入这个公司,<英国铁路公司>
+然而事实是你的努力领导看不到,每天重复着那机械式动作和那虚伪的假笑而他们只需要结果。<英国铁路公司>
+只有每周仅有的一天休息才让我知道我还活着。</p>
+   <p>    终于在疫情和这样残酷的现实面前我毅然选择了做出改变再也不会去这样对待员工的地方,<英国铁路公司>
+也算是自我救赎解放了吧。</p>
+<p>    在开W3C学校始了<a href=" https://www.w3cschool.cn ">启蒙学习</a>。</p>
 
 
 
   
-  <h1></h1></div>
-    <p>&nbsp&nbsp&nbsp&nbsp后面偶然看见<em>康文昌</em>老师的<em>从零开始编程之路</em>开始系统性的学习。<br>
-      期间帮助我的有<a href="https://m.bilibili.com/space/34786453">从零开始编程之路</a>、<a href="https：//github.com">github</a>、<a href="https://www.runoob.com">菜鸟教程</a>
+  <氕></氕></差异>
+    <p>    后面偶然看见<全身长的>康文昌</全身长的>老师的<全身长的>从零开始编程之路</全身长的>开始系统性的学习。<英国铁路公司>
+期间帮助我的有<a href=" https://m . bilibili . com/space/34786453 ">从零开始编程之路</a>、<a href=" https://github.com ">开源代码库</a>、<a href=" https://www.runoob.com ">菜鸟教程</a>
 
 
 
@@ -53,32 +53,32 @@ p{
     </p>
     <p>
 
-      <a href="https://www.w3cschool.cn">这是我的作业</a>
+      <a href=" https://www.w3cschool.cn ">这是我的作业</a>
     </p>
-    <p>这是我的<a href="mailto:2257564197@qq.com">邮箱</a></p>
-    <p>照片:</p>
-    <input type="file" />
-    <input type="submit" value="确定" />
-    <p>留言板：<br><textarea cols="70px"rows="7px"  placeholder="中文/English" ></textarea></p>
+    <p>这是我的<a href=" mailto:2257564197@qq.com ">邮箱</a></p>
+    <p>照片：</p>
+    <投入类型="文件" />
+    <投入类型="提交" 价值="确定" />
+    <p>留言板：<英国铁路公司><文本区域关口=" 70px "行=" 7px "  占位符="中文/英语" ></文本区域></p>
   
   
   
   
-    <p>爱好:</p><input type="checkbox"/>足球<input type="checkbox" />篮球</p>
-    </div>
- <div style="text-align: right;">
-<p>学习交流群&nbsp&nbsp&nbsp&nbsp</p>
-<img src="huiwx.jpg.jpg"width="100px"height="100px" alt="二维码" usemap="#planetmap">
+    <p>爱好：</p><投入类型="复选框"/>足球<投入类型="复选框" />篮球</p>
+    </差异>
+ <差异风格="文本对齐: 正确;">
+<p>学习交流群    </p>
+<img科学研究委员会=" huiwx.jpg.jpg "宽度=" 100像素"高度=" 100像素" 中高音="二维码" 使用地图=" #planetmap ">
 
-<map name="planetmap">
-  <area shape="rect" coords="0,0,82,126" alt="学习" href="学习.html">
-</map>
- </div>
+<地图名字=“行星地图”>
+  <区域形状="矩形" 坐标="0,0,82,126" 中高音="学习" href="学习。html ">
+</地图>
+ </差异>
  
  
-  <div
- style="text-align:center";>
-<p><a href="https://www.runoob.com">更多详细信息</a></p>
-  </div>
-</body>
-</html>
+  <差异
+ 风格="文本对齐:中心";>
+<p><a href=" https://www.runoob.com ">更多详细信息</a></p>
+  </差异>
+</身体>
+</超文本标记语言>
