--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>练习</title>
+    <title>何晓辉</title>
   </head>
   <body>
     <div style="background-color: aliceblue; text-align: center; padding: 40px">
