--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       </p>
       <p>这是我的<a href="mailto:2257564197@qq。com">邮箱</a>。</p>
     </div>
+    <p>现在找了一个时间自由一点的工作，一边上班一边学习，我的第一个网站也正式上线了。</p>
     <div
       style="
         background-color: aliceblue;
