--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <p>
         &nbsp&nbsp&nbsp&nbsp
         你好啊朋友,我是<strong>Allen何晓辉</strong>。茫茫人海你能够看到这个网站也是你我的缘分。<br />
-        现在是一个自学编程的小白虽然这很难，我想我为了梦想会坚持一段时间的吧。<br />
+        现在是一个学编程的攻城狮虽然这很难，我想我为了梦想会坚持一段时间的吧。<br />
       </p>
       <p>
         &nbsp&nbsp&nbsp&nbsp
-        以前在<b>富士康</b>、<b>顺丰</b>和<b>海底捞</b>工作过一段时间,发现这种工作浪费自己大量宝贵的时间和青<br />春，
+        以前在<b>顺丰</b>和<b>海底捞</b>工作过一段时间,发现这种工作浪费自己大量宝贵的时间和青<br />春，
         渐渐的发现这样的工作并不适合我。应该去找一个适合自己的工作或者自己爱好的工作。<br />
         当然这种想法一旦开始它就不会停下，可能想的太简单了，我已经很努力的想要去做这件事，不<br />管结果如何以后我回忆起来我会觉得它值得我去做的。<br />
       </p>
@@ -64,7 +64,7 @@
       </p>
       <p>这是我的<a href="mailto:2257564197@qq。com">邮箱</a>。</p>
     </div>
-    <p style="text-align:center;">现在找了一个时间自由一点的工作，一边上班一边学习，我的第一个网站也正式上线了。</p>
+    <p style="text-align:center;">现在找了一个时间自由一点的工作，一边上班一边学习，我的个人网站也正式上线了。</p>
     <div
       style="
         background-color: aliceblue;
@@ -74,7 +74,7 @@
       "
     >
       <p>我的网站</p>
-      <h1>新页面</h1>
+      <h1>需要个人网站或者官网的客户可以通过邮箱联系我。</h1>
       <a href="https://kangwenchang.com/"> 更多详细信息 </a>
     </div>
   </body>
