--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       "
     >
       <p>我的网站</p>
-      <h1>需要个人网站或者官网的客户可以通过邮箱联系我。</h1>
-      <a href="https://kangwenchang.com/"> 更多详细信息 </a>
+      <h1>需要个人网站或者官网的客户可通过邮箱联系我。</h1>
+      <a href="https://www.midorg.com/map.html"> 更多详细信息 </a>
     </div>
   </body>
 </html>
