--- a/商品列表.html
+++ b/商品列表.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flex 布局</title>
+    <title>商品列表</title>
     <meta name="description" content="Re01 编程课的Flex布局演示。" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
