--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
   </head>
-  <form action="splb.html" method="post">
+  <form action="个人简介.html" method="post">
     <bady>
       <div
         style="
